// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task UI Should be able to add a prefix to a task's name 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  [7mh[27mello                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add a prefix to a task's name 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  hi, [7mh[27mello                                                                                ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add a suffix to a task's name 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  hello[7m [27m                                                                                   ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add a suffix to a task's name 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  hello world[7m [27m                                                                             ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [31mNo tasks created yet[39m                                                                           ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  [7m [27m                                                                                        ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [31mNo tasks created yet[39m                                                                           ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  Gamma[7m [27m                                                                                   ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard uncommitted changes of an ONGOING task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard uncommitted changes of an ONGOING task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  Gamma Ray[7m [27m                                                                               ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard uncommitted changes of an ONGOING task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  [7m [27m                                                                                        ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  Hello World[7m [27m                                                                             ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Hello World                                                                              ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Hello World                                                                              ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  [7m [27m                                                                                        ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Hello World                                                                              ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  Hello World[7m [27m                                                                             ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 6`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Hello World                                                                              ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Hello World                                                                              ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] TODO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  TODO[7m [27m                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  TOD[7mO[27m                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  TO[7mD[27mO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  T[7mO[27mDO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 6`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  [7mT[27mODO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] TODO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  [7mT[27mODO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  T[7mO[27mDO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  TO[7mD[27mO                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  TOD[7mO[27m                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 6`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  TODO[7m [27m                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [31mNo tasks created yet[39m                                                                           ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [31mNo tasks created yet[39m                                                                           ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [2m[x][22m [9m[2mGamma[22m[29m                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [2m[x][22m [9m[2mGamma[22m[29m                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update a task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update a task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m  *  Gamma Ray[7m [27m                                                                               ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update a task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Alpha                                                                                    ┃
 ┃                                                                                                ┃
 ┃ [1m[96m [39m[22m [ ] Beta                                                                                     ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [ ] Gamma Ray                                                                                ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update the UI's title 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [31mNo tasks created yet[39m                                                                           ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update the UI's title 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mMy TODO list[39m                                                                                   ┃
 ┃                                                                                                ┃
 ┃ [31mNo tasks created yet[39m                                                                           ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should not be able update a FINISHED task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [2m[x][22m [9m[2mGamma[22m[29m                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should not be able update a FINISHED task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                                                                ┃
 ┃ [35mTODO[39m                                                                                           ┃
 ┃                                                                                                ┃
 ┃ [1m[96m➜[39m[22m [2m[x][22m [9m[2mGamma[22m[29m                                                                                    ┃
 ┃                                                                                                ┃
 ┃                                                                                                ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;
